# tagger

./: .gitignore  .mailmap  Cargo.toml  README.md  TODO.org
logicbatch/: Cargo.toml
logicbatch/src/: client.rs  lib.rs  main.rs  tag_server_capnp.rs
schemata/: tag_server.capnp
streamer/: Cargo.toml
streamer/src/: client.rs  controller.rs  copier.rs  data.rs  lib.rs  main.rs  processor.rs  rpc.rs  server.rs  tag_server_capnp.rs  tags_capnp.rs  timer.rs
tagger_capnp/: Cargo.toml  LICENSE  README.md
tagger_capnp/capnp/: tag_server.capnp  tags.capnp
tagger_capnp/src/: lib.rs  tag_server_capnp.rs  tags_capnp.rs
tagsave/: Cargo.toml
tagsave/src/: client.rs  lib.rs  main.rs  save.rs
tagserver/: Cargo.toml  LICENSE
tagserver/src/: controller.rs  lib.rs  main.rs  server.rs  tag_server.capnp  tag_server_capnp.rs  timer.rs
tagstream/: Cargo.toml  LICENSE
tagstream/src/: controller.rs  lib.rs  main.rs  processor.rs  rpc.rs  server.rs
tagtools/: .gitignore  Cargo.toml  README.md
tagtools/benches/: bit.rs  pat.rs  patterns.rs  serde.rs
tagtools/benches/common/: mod.rs
tagtools/benches/resources/: coincidence_histogram_500k.txt  g2_histogram_500k.txt
tagtools/contrib/: runfile_example.json
tagtools/doc/: format.md  tags_format.md
tagtools/examples/: g2ex.rs
tagtools/src/: bit.rs  cfg.rs  de.rs  lib.rs  pat.rs  ser.rs  tags.capnp  tags_capnp.rs
tagtools/tests/: cfg.rs  pat.rs  patterns.rs  serde.rs
tagtools/tests/resources/: testdata_500k.tsv.zst
tagview/: Cargo.toml  LICENSE
tagview/examples/: de.rs  ser.rs
tagview/src/: app.rs  client.rs  config.rs  lib.rs  main.rs  save.rs  settings.rs  settings_client.rs  terminal.rs  timer.rs  ui.rs
tagview/tests/: config_serde.rs
timetag/: .gitignore  Cargo.toml  build.rs
timetag/include/: CLogic.h  CTimeTag.h  taghelper.h
timetag/src/: lib.rs  taghelper.cc
xtask/: Cargo.toml
xtask/src/: main.rs
