[package]
name = "logicbatch"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.41"
capnp = "0.14.2"
capnp-rpc = "0.14.1"
flume = "0.10.7"
futures = "0.3.15"
serde = { version = "1.0.126", features = ["derive"] }
tagger_capnp = { path = "../tagger_capnp"}
tokio = { version = "1.7.1", features = ["full"] }
tokio-util = { version = "0.6.7", features = [ "compat"] }
toml = "0.5.8"