[package]
name = "streamer"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.41"
bit-iter = "=0.1.4"
capnp = "0.14.2"
capnp-rpc = "0.14.1"
cxx = "1.0.49"
flume = "0.10.7"
futures = "0.3.15"
parking_lot = "0.11.1"
rand = "0.8.4"
rayon = "1.5.1"
serde = "1.0.126"
tagger_capnp = { path = "../tagger_capnp"}
tagtools = { path = "../tagtools" }
timetag = { path = "../timetag" }
tokio = { version = "1.7.1", features = ["full"] }
tokio-util = { version = "0.6.7", features = ["compat"] }