[package]
name = "tagsave"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
argh = "0.1"
bit-iter = "1.0"
capnp = "0.14"
capnp-rpc = "0.14"
chrono = "0.4"
flume = "0.10"
futures = "0.3"
parking_lot = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tagger_capnp = { path = "../tagger_capnp"}
tagtools = { path = "../tagtools" }
tokio = { version = "1.7", features = ["full"] }
tokio-util = { version = "0.6", features = [ "compat"] }