[package]
name = "tagstream"
version = "3.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
argh = "0.1"
bit-iter = "1.1"
capnp = "0.14"
capnp-rpc = "0.14"
cxx = "1.0"
either = "1.6"
enable-ansi-support = "0.1"
flume = "0.10"
futures = "0.3"
git-version = "0.3"
num = "0.4"
parking_lot = "0.11"
rand = "0.8"
rayon = "1.5"
ryu = "1.0"
serde = "1.0"
tagger_capnp = { path = "../tagger_capnp"}
tagtools = { path = "../tagtools" }
timetag = { path = "../timetag" }
tokio = { version = "1.7", features = ["full"] }
tokio-util = { version = "0.6", features = ["compat"] }
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = "0.3"
