[package]
name = "tagtools"
version = "0.1.0"
authors = ["Bob Peterson <bob@rwp.is>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "patterns"
harness = false

[dev-dependencies]
bencher = "0.1.5"

[dependencies]
anyhow = "1.0.13"
bit-iter = "0.1.5"
capnp = "0.14.2"
chrono = { version = "0.4.19", features = ["serde"] }
csv = "1.1.6"
humantime-serde = "1.0.1"
itertools = "0.10.0"
serde = { version = "1.0.126", features = ["derive"] }
tagger_capnp = { path = "../tagger_capnp" }
zstd = "0.9.0"