[package]
name = "tagtools"
version = "2.1.0"
authors = ["Bob Peterson <bob@rwp.is>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "pat"
harness = false

[[bench]]
name = "bit"
harness = false

[[bench]]
name = "serde"
harness = false

[dev-dependencies]
criterion = "0.3"
humantime = "2.1"

[dependencies]
anyhow = "1.0"
argh = "0.1"
bit-iter = "1.0"
capnp = "0.14"
chrono = { version = "0.4", features = ["serde"] }
csv = "1.1"
either = "1.6"
git-version = "0.3"
humantime-serde = "1.0"
itertools = "0.10"
num-traits = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tagger_capnp = { path = "../tagger_capnp" }
zstd = "0.9"